--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.8.0",
+    "react-use": "^17.6.0",
     "typescript": "^5.9.2",
     "use-immer": "^0.11.0"
   },
