--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@gsap/react": "^2.1.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/lodash-es": "^4.17.12",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
+    "gsap": "^3.13.0",
     "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
     "msw": "^2.10.4",
