--- a/express-demo/package.json
+++ b/express-demo/package.json
@@ -14,7 +14,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "ollama": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
