--- a/react-demo/package.json
+++ b/react-demo/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^6.0.0",
     "@gsap/react": "^2.1.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/lodash-es": "^4.17.12",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
@@ -26,6 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.8.0",
     "react-use": "^17.6.0",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.9.2",
     "use-immer": "^0.11.0"
   },
